finish adding bands

--- a/app/views/bands/_form.html.erb
+++ b/app/views/bands/_form.html.erb
@@ -5,7 +5,7 @@
   <input type="hidden" name="_method" value=<%= use_method %>>
   <%= auth_token %>
   <label for="band_name">Band name</label>
-  <input type="text" id="band_name" name="band[name]" value=<%= band.name %>>
+  <input type="text" id="band_name" name="band[name]" value="<%= band.name %>">
   <br>
   <input type="submit">
 </form>
