--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -1,5 +1,5 @@
 <h2><%= @band.name %></h2>
-<%= link_to "Edit", edit_band_url(@band) %>
-<%= link_to "Delete", band_url(@band), method: :delete %>
-<%= link_to "Bands Index", bands_url %>
-<%= link_to "Add an Album", new_band_album_url(@band) %>
+<%= link_to "edit", edit_band_url(@band) %>
+<%= link_to "delete", band_url(@band), method: :delete %>
+<%= link_to "band index", bands_url %>
+<%= link_to "add an album", new_band_album_url(@band) %>
