--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,3 @@
-<h2>Sign up</h2>
+<h2>sign up</h2>
 
-<form action=<%= users_url %> method="post">
-  <%= auth_token %>
-
-  <label for="user_email">Email</label>
-  <input type="text"
-         name="user[email]"
-         id="user_email"
-         value=<%= @user.email %>
-         >
-  <br>
-
-  <label for="user_password">Password</label>
-  <input type="password" name="user[password]" id="user_password">
-  <br>
-
-  <input type="submit">
-</form>
+<%= render "shared/log", destination: users_url, user: @user %>
