--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,5 +1,5 @@
-<h2>Album Index</h2>
+<h2>album index</h2>
 
 <%= render @albums %>
 <br>
-<a href=<%= bands_url %>>Band Index</a>
+<a href=<%= bands_url %>>band index</a>
