--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,6 +1,15 @@
 <h2><%= @album.name %></h2>
-<h4><%= @album.band.name %></h2>
+<p><%= @album.is_live ? "live album by" : "studio album by" %></p>
+<h4><%= @album.band.name %></h4>
+<h3>tracks</h3>
+<%= render partial: "track", collection: @album.tracks, as: :track %>
+<br>
 <%= link_to "edit", edit_album_url(@album) %>
+<br>
 <%= link_to "delete", album_url(@album), method: :delete %>
+<br>
 <%= link_to "all albums by #{@album.band.name}", band_url(@album.band) %>
+<br>
+<%= link_to "all albums", albums_url %>
+<br>
 <%= link_to "add a track", new_album_track_url(@album) %>
