--- a/app/views/bands/_form.html.erb
+++ b/app/views/bands/_form.html.erb
@@ -4,7 +4,7 @@
 <form action=<%= dest_url %> method="post">
   <input type="hidden" name="_method" value=<%= use_method %>>
   <%= auth_token %>
-  <label for="band_name">Band name</label>
+  <label for="band_name">band name</label>
   <input type="text" id="band_name" name="band[name]" value="<%= band.name %>">
   <br>
   <input type="submit">
