--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,5 +1,5 @@
-<h2>Band Index</h2>
+<h2>band index</h2>
 
 <%= render @bands %>
 <br>
-<a href=<%= new_band_url %>>Add a band</a>
+<a href=<%= new_band_url %>>add a band</a>
