--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -38,9 +38,8 @@
         >
 
   <label for="track_lyrics">lyrics</label>
-  <textarea name="track[lyrics]" id="track_lyrics">
-    <%= track.lyrics %>
+  <textarea name="track[lyrics]" id="track_lyrics"><%= track.lyrics %>
   </textarea>
-  
+
   <input type="submit">
 </form>
