--- a/app/views/albums/_album.html.erb
+++ b/app/views/albums/_album.html.erb
@@ -1,6 +1,8 @@
 <%= link_to album.name, album_url(album) %>
 by
 <%= link_to album.band.name, band_url(album.band) %>
-<%= link_to "edit", edit_album_url(album) %>
-<%= link_to "delete", album_url(album), method: :delete %>
+<% if current_user.admin %>
+  <%= link_to "edit", edit_album_url(album) %>
+  <%= link_to "delete", album_url(album), method: :delete %>
+<% end %>
 <br>
