--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,6 +1,6 @@
 <h4>note by <%= note.user.email %></h4>
 <%= note.text.slice(0, 1000) %>
-<% if current_user == note.user %>
+<% if current_user == note.user || current_user.admin %>
   <%= link_to "delete", note_url(note), method: :delete %>
 <% end %>
 </br>
